clusters/talos-cluster/authelia/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-route
  namespace: authelia
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "auth.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 9091
